--- a/linux-xiaomi-dandelion/APKBUILD
+++ b/linux-xiaomi-dandelion/APKBUILD
@@ -35,6 +35,10 @@ source="
 	0003-drvgen-Add-cmp-function.patch
 	0004-drvgen-Remplace-string.atoi-to-int-fnc.patch
 	0005-drvgen-Rename-list-variables-for-py3.patch
+	0006-drvgen-Remove-duplicate-of-DT_EXT_MD_EXP.patch
+	0007-drvgen-Fix-YuSu.cmp-duplicates.patch
+	0008-ft8006s_spi-Add-dummy-firmware.patch
+	linux4.2-gcc10-extern_YYLOC_global_declaration.patch
 "
 builddir="$srcdir/$_repository-$_commit"
 _outdir="out"
@@ -58,9 +62,13 @@ package() {
 sha512sums="
 d1180f0be8111fba40030b5cae104d5ba60cd49408276bdb9bce3594e8cae5151fa6e90861068d6abbe0b6392514a99f0ac578aff8bdf69d02445e278b663f43  linux-xiaomi-dandelion-8974b9164af90d94603900b229264ae879a83a83.tar.gz
 722f3d1ee4d879895135e7c755e027c5f7fbcb0512a9d3f08e01173064a7880c3a67a6154082227fb5eff475233830ba8627e4b18c42dfda6fdfffeb0f55b836  config-xiaomi-dandelion.aarch64
-8d2d30e1ac8de574585302f42355fef060bd76ee8c4b5acdcd49c330b59570e6da26b812ac7634129c98474a581b0df5681e1ce9323d0ca5bb9924481f56266d  0001-drvgen-Upgrade-to-Python3.patch
-e2d8a859693e33ba80c423801d6c2bf2eba1cfd4ac3dd9b6a55218e31b938c2892f1cacf0052be00c9ace8090e9563998e95abd9cd949e3afc578958c39f02b2  0002-drvgen-Upgrade-components-to-Python-3.patch
-dc3a9ce3cbb04f03c99bf1debcc454c336efffde9d14194ab4d85fda780efb3649bab8429a4c3b9b0a2c90947d688cc5b5e8589d8e1e0fc8b60a34508af7a0f7  0003-drvgen-Add-cmp-function.patch
-736e6bd90a415fa6688187563dd34e98ef651acbfb2ddaba9a58be26adb43a3a73230354dc15f68251c6609c5ffd7754f10acb73a1cf00ab530b851159d30ba8  0004-drvgen-Remplace-string.atoi-to-int-fnc.patch
-4df44ac310521e5fd177edb1603ade3712f3b99f2a905c249828dc736fcff25a541d037d7e4c6a23bb63de00d965ccb4439d75ac35bc6cd0599b89f45502560a  0005-drvgen-Rename-list-variables-for-py3.patch
+5fe1a118f7435dc09158967e0e7a865b1b3f4c6b468852f07ff54114d45468146509d409146311f984cf41e0cdf0c36b27f501d9c8ef81bfbc6ffc1af2d092b6  0001-drvgen-Upgrade-to-Python3.patch
+173b55b0a0ca643d884c131b42d9bf643994c427d8899c8765a0bd69210ab43dcf47d778f432e4d066e9fb5fce68ec30555fe963e81af639c8ff296c21f933f3  0002-drvgen-Upgrade-components-to-Python-3.patch
+12a512f5d994a71a6dff67ad50976e4f882b3c6bf793cdfb4f861f282484509e2d49d54b0fab4fa47ceaf5fccb3f57b1571cdc5c2e889732955882190e3915c2  0003-drvgen-Add-cmp-function.patch
+a81894e2867b7dab00fce146cd929d6bed4df959eb943f1b98b004b2ac3b83d8d276e889ccacc34d619925cf617eb44b1988b080b7d12ad7639b583517dab804  0004-drvgen-Remplace-string.atoi-to-int-fnc.patch
+3618195f2da482a4224b40e1176ab13d748013bff3dc618b215047218362c58b89b80d86a6cfe8da9bf1c8fa4797599b8508d9b93a4d10b73b800c3fc92740e8  0005-drvgen-Rename-list-variables-for-py3.patch
+bfa653127d610282d5ab93da0618404b899f1387c0e60452d3dc44c12bb40fdd5f369d554fa46819f6a22141c110da96c588e1fe296ce818d6c546ba29aa5ce8  0006-drvgen-Remove-duplicate-of-DT_EXT_MD_EXP.patch
+e47af5085d1f1a55c11666d289c227d45acea72543dc5c922447c17cb4d0a1e575def808c87f1c7cf0a42fac584cd6231e032bbb785cd07e49d30b32e4940ea8  0007-drvgen-Fix-YuSu.cmp-duplicates.patch
+f25ef88110a29391abd4e143386befed10661884a5bf2dfe0ca4bde121caf09b5a0b2a7fd5f754a3af5f97036259efacab3435f0f05b5ad9cba1bcde68621c66  0008-ft8006s_spi-Add-dummy-firmware.patch
+eaf2e61fcb508cdd239b8fed209d2a09ecac77287f6b46d003918fdf1c6fa2ee63f7390f3ff7c49029b8ed6cbcdd81c7e9a4b1ece9f5060b6fc84e322bd47f41  linux4.2-gcc10-extern_YYLOC_global_declaration.patch
 "
